2010-02-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkrawimage.c (generate_image): Add forgotten ALIGN_UP.

2010-02-10  Vladimir Serbinenko  <phcoder@gmail.com>

	Pass SIMPLE framebuffer size in bytes and not 64K blocks.

	* loader/i386/efi/linux.c (grub_linux_setup_video): Don't divide by 64K.
	* loader/i386/linux.c (grub_linux_setup_video): Likewise.
	(grub_linux_boot): Divide by 64K when on VESA.

2010-02-10  Vladimir Serbinenko  <phcoder@gmail.com>

	Support GRUB_GFXPAYLOAD_LINUX.

	* util/grub-mkconfig.in: Export GRUB_GFXPAYLOAD_LINUX.
	* util/grub.d/10_linux.in (linux_entry): Handle GRUB_GFXPAYLOAD_LINUX.

2010-02-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* script/execute.c (grub_script_execute_cmdline): Use grub_print_error
	to show messages instead of discarding them.
	Process errors after executing command and not before. Keep old method
	too as precaution.

2010-02-09  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Check for ft2build.h.

2010-02-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* kern/ieee1275/openfw.c (grub_halt): Try executing "poweroff".

2010-02-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* genkernsyms.sh.in: Use TARGET_CC.

2010-02-07  Colin Watson  <cjwatson@ubuntu.com>

	* NEWS: Update.

2010-02-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/multiboot2.h: Remove leftover file.
	* include/grub/normal.h [GRUB_UTIL]: Remove leftover declarations.
	* include/grub/partition.h [GRUB_UTIL]: Likewise.

2010-02-07  Yves Blusseau  <blusseau@zetam.org>

	* gnulib/getdelim.c: add missing header (type ssize_t must be defined).

2010-02-07  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix warnings in grub-emu when compiling with maximum warning options.

	* util/grub-emu.c (ENABLE_RELOCATABLE): New definition.
	(grub_arch_modules_addr): Return 0 and not NULL.
	* util/misc.c (ENABLE_RELOCATABLE): New definition.
	(xstrdup): Use newstr instead of dup.